[tool.poetry]
name = "pycounts_Anthea"
version = "0.1.0"
description = "package for DSCI 524"
authors = ["anthea"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
